force-app/main/default/objects/Event_Organizer__c/fields/Alternative_Email__c.field-meta.xml
<CustomField>
    <fullName>Alternative_Email__c</fullName>
    <description
  >A secondary email address for the event organizer, used as a backup contact method.</description>
    <inlineHelpText
  >Enter an alternative email address for this organizer, if any.</inlineHelpText>
    <label>Alternative Email</label>
    <type>Email</type>
</CustomField>