force-app/main/default/objects/Event_Organizer__c/fields/Alternative_Phone__c.field-meta.xml
<CustomField>
    <fullName>Alternative_Phone__c</fullName>
    <description
  >A secondary phone number for the event organizer, used as a backup contact method.</description>
    <inlineHelpText
  >Enter an alternative phone number for this organizer, if any.</inlineHelpText>
    <label>Alternative Phone</label>
    <type>Phone</type>
</CustomField>