force-app/main/default/objects/Event_Organizer__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <description>The event organizer's primary email address.</description>
    <inlineHelpText
  >Enter the event organizer's primary email address.</inlineHelpText>
    <label>Email</label>
    <required>true</required>
    <type>Email</type>
</CustomField>