force-app/main/default/objects/Event_Organizer__c/fields/Phone__c.field-meta.xml
<CustomField>
    <fullName>Phone__c</fullName>
    <description
  >The event organizer's primary contact phone number.</description>
    <inlineHelpText
  >Enter the event organizer's primary phone number.</inlineHelpText>
    <label>Phone</label>
    <required>true</required>
    <type>Phone</type>
</CustomField>